--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -9,3 +9,7 @@
     <div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
   {% endif %}
 </div>
+
+{% if site.weibo_share %} 
+   {% include post/weibo.html %} 
+{% endif %}
